test: JUnit 6 Migration and adding checkstyle (#950)
Closes: MODINV-1401