@@ -5,16 +5,15 @@ import static java.lang.String.format;
 import com.github.benmanes.caffeine.cache.AsyncCache;
 import com.github.benmanes.caffeine.cache.Caffeine;
 import io.vertx.core.Future;
+import io.vertx.core.Vertx;
 import io.vertx.core.http.HttpClient;
 import io.vertx.core.json.Json;
 import io.vertx.core.json.JsonObject;
-import io.vertx.core.Vertx;
 import io.vertx.ext.web.client.WebClient;
-import java.net.URL;
+import java.net.URI;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
-
 import lombok.SneakyThrows;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
@@ -22,50 +21,67 @@ import org.apache.logging.log4j.Logger;
 import org.folio.HttpStatus;
 import org.folio.MappingMetadataDto;
 import org.folio.inventory.common.Context;
-import org.folio.inventory.dataimport.exceptions.CacheLoadingException;
-import org.folio.inventory.support.http.client.SynchronousHttpClient;
+import org.folio.inventory.exceptions.CacheLoadingException;
 import org.folio.inventory.support.http.client.OkapiHttpClient;
-
+import org.folio.inventory.support.http.client.SynchronousHttpClient;
 
 /**
- * Cache for storing MappingMetadataDto entities by jobExecutionId
+ * Cache for storing MappingMetadataDto entities by jobExecutionId.
  */
-public class MappingMetadataCache {
+public final class MappingMetadataCache {
 
   private static final Logger LOGGER = LogManager.getLogger();
+  private static final String METADATA_EXPIRATION_TIME = "inventory.mapping-metadata-cache.expiration.time.seconds";
+  private static final String MAPPING_PARAM_LOAD_ERROR_LOG_MSG_TEMPLATE =
+    "Error loading MappingMetadata by jobExecutionId: '{}'";
+  private static final String DEFAULT_CACHE_EXPIRATION = "3600";
   private static MappingMetadataCache instance = null;
   private final AsyncCache<String, Optional<MappingMetadataDto>> cache;
   private final HttpClient httpClient;
-  private static final String METADATA_EXPIRATION_TIME = "inventory.mapping-metadata-cache.expiration.time.seconds";
-  private static final String MAPPING_PARAM_LOAD_ERROR_LOG_MSG_TEMPLATE = "Error loading MappingMetadata by jobExecutionId: '{}'";
 
-  public MappingMetadataCache(Vertx vertx, HttpClient httpClient, long cacheExpirationTime) {
-    this.httpClient = httpClient;
-    cache = Caffeine.newBuilder()
+  private MappingMetadataCache(Vertx vertx, long cacheExpirationTime) {
+    this.httpClient = vertx.createHttpClient();
+    this.cache = Caffeine.newBuilder()
       .expireAfterAccess(cacheExpirationTime, TimeUnit.SECONDS)
       .executor(task -> vertx.runOnContext(v -> task.run()))
       .buildAsync();
   }
 
+  public static MappingMetadataCache getInstance(Vertx vertx) {
+    return getInstance(vertx, false);
+  }
+
+  public static synchronized MappingMetadataCache getInstance(Vertx vertx, boolean returnNew) {
+    if (instance == null || returnNew) {
+      instance = new MappingMetadataCache(vertx,
+        Long.parseLong(getCacheEnvVariable(vertx.getOrCreateContext().config())));
+    }
+    return instance;
+  }
+
   public Future<Optional<MappingMetadataDto>> get(String jobExecutionId, Context context) {
     try {
-      return Future.fromCompletionStage(cache.get(jobExecutionId, (key, executor) -> loadJobProfileSnapshot(key, context)));
+      return Future.fromCompletionStage(
+        cache.get(jobExecutionId, (key, executor) -> loadJobProfileSnapshot(key, context)));
     } catch (Exception e) {
       LOGGER.warn(MAPPING_PARAM_LOAD_ERROR_LOG_MSG_TEMPLATE, jobExecutionId, e);
       return Future.failedFuture(e);
     }
   }
 
-  public Future<Optional<MappingMetadataDto>> getByRecordType(String jobExecutionId, Context context, String recordType) {
+  public Future<Optional<MappingMetadataDto>> getByRecordType(String jobExecutionId, Context context,
+                                                              String recordType) {
     try {
-      return Future.fromCompletionStage(cache.get(jobExecutionId, (key, executor) -> loadMappingMetadata(recordType, context)));
+      return Future.fromCompletionStage(
+        cache.get(jobExecutionId, (key, executor) -> loadMappingMetadata(recordType, context)));
     } catch (Exception e) {
       LOGGER.warn(MAPPING_PARAM_LOAD_ERROR_LOG_MSG_TEMPLATE, jobExecutionId, e);
       return Future.failedFuture(e);
     }
   }
 
-  public Optional<MappingMetadataDto> getByRecordTypeBlocking(String jobExecutionId, Context context, String recordType) {
+  public Optional<MappingMetadataDto> getByRecordTypeBlocking(String jobExecutionId, Context context,
+                                                              String recordType) {
     try {
       var mapping = cache.synchronous().asMap().getOrDefault(jobExecutionId, Optional.empty());
       if (mapping.isPresent()) {
@@ -81,23 +97,27 @@ public class MappingMetadataCache {
   }
 
   @SneakyThrows
-  private CompletableFuture<Optional<MappingMetadataDto>> loadJobProfileSnapshot(String jobExecutionId, Context context) {
-    LOGGER.debug("Trying to load MappingMetadata by jobExecutionId  '{}' for cache, okapi url: {}, tenantId: {}", jobExecutionId, context.getOkapiLocation(), context.getTenantId());
+  private CompletableFuture<Optional<MappingMetadataDto>> loadJobProfileSnapshot(String jobExecutionId,
+                                                                                 Context context) {
+    LOGGER.debug("Trying to load MappingMetadata by jobExecutionId  '{}' for cache, okapi url: {}, tenantId: {}",
+      jobExecutionId, context.getOkapiLocation(), context.getTenantId());
 
-    OkapiHttpClient client = new OkapiHttpClient(WebClient.wrap(httpClient), new URL(context.getOkapiLocation()), context.getTenantId(), context.getToken(), null, null, null);
+    OkapiHttpClient client = new OkapiHttpClient(WebClient.wrap(httpClient),
+      new URI(context.getOkapiLocation()).toURL(), context.getTenantId(), context.getToken(), null, null, null);
 
     return client.get(context.getOkapiLocation() + "/mapping-metadata/" + jobExecutionId)
       .toCompletableFuture()
       .thenCompose(httpResponse -> {
-        if (httpResponse.getStatusCode() == HttpStatus.SC_OK) {
+        if (httpResponse.statusCode() == HttpStatus.SC_OK) {
           LOGGER.info("MappingMetadata was loaded by jobExecutionId '{}'", jobExecutionId);
-          return CompletableFuture.completedFuture(Optional.of(Json.decodeValue(httpResponse.getBody(), MappingMetadataDto.class)));
-        } else if (httpResponse.getStatusCode() == HttpStatus.SC_NOT_FOUND) {
-         LOGGER.warn("MappingMetadata was not found by jobExecutionId '{}'", jobExecutionId);
+          return CompletableFuture.completedFuture(
+            Optional.of(Json.decodeValue(httpResponse.body(), MappingMetadataDto.class)));
+        } else if (httpResponse.statusCode() == HttpStatus.SC_NOT_FOUND) {
+          LOGGER.warn("MappingMetadata was not found by jobExecutionId '{}'", jobExecutionId);
           return CompletableFuture.completedFuture(Optional.empty());
         } else {
           String message = format("Error loading MappingMetadata by id: '%s', status code: %s, response message: %s",
-            jobExecutionId, httpResponse.getStatusCode(), httpResponse.getBody());
+            jobExecutionId, httpResponse.statusCode(), httpResponse.body());
           LOGGER.warn(message);
           return CompletableFuture.failedFuture(new CacheLoadingException(message));
         }
@@ -106,22 +126,26 @@ public class MappingMetadataCache {
 
   @SneakyThrows
   private CompletableFuture<Optional<MappingMetadataDto>> loadMappingMetadata(String recordType, Context context) {
-    LOGGER.debug("Trying to load MappingMetadata by recordType  '{}' for cache, okapi url: {}, tenantId: {}", recordType, context.getOkapiLocation(), context.getTenantId());
+    LOGGER.debug("Trying to load MappingMetadata by recordType  '{}' for cache, okapi url: {}, tenantId: {}",
+      recordType, context.getOkapiLocation(), context.getTenantId());
 
-    OkapiHttpClient client = new OkapiHttpClient(WebClient.wrap(httpClient), new URL(context.getOkapiLocation()), context.getTenantId(), context.getToken(), null, null, null);
+    OkapiHttpClient client = new OkapiHttpClient(WebClient.wrap(httpClient),
+      new URI(context.getOkapiLocation()).toURL(), context.getTenantId(), context.getToken(), null, null, null);
 
     return client.get(context.getOkapiLocation() + "/mapping-metadata/type/" + recordType)
       .toCompletableFuture()
       .thenCompose(httpResponse -> {
-        if (httpResponse.getStatusCode() == HttpStatus.SC_OK) {
+        if (httpResponse.statusCode() == HttpStatus.SC_OK) {
           LOGGER.info("MappingMetadata was loaded by recordType '{}'", recordType);
-          return CompletableFuture.completedFuture(Optional.of(Json.decodeValue(httpResponse.getBody(), MappingMetadataDto.class)));
-        } else if (httpResponse.getStatusCode() == HttpStatus.SC_NOT_FOUND) {
+          return CompletableFuture.completedFuture(
+            Optional.of(Json.decodeValue(httpResponse.body(), MappingMetadataDto.class)));
+        } else if (httpResponse.statusCode() == HttpStatus.SC_NOT_FOUND) {
           LOGGER.warn("MappingMetadata was not found by recordType '{}'", recordType);
           return CompletableFuture.completedFuture(Optional.empty());
         } else {
-          String message = format("Error loading MappingMetadata by recordType: '%s', status code: %s, response message: %s",
-            recordType, httpResponse.getStatusCode(), httpResponse.getBody());
+          String message =
+            format("Error loading MappingMetadata by recordType: '%s', status code: %s, response message: %s",
+              recordType, httpResponse.statusCode(), httpResponse.body());
           LOGGER.warn(message);
           return CompletableFuture.failedFuture(new CacheLoadingException(message));
         }
@@ -130,43 +154,31 @@ public class MappingMetadataCache {
 
   @SneakyThrows
   private Optional<MappingMetadataDto> getMappingMetadata(String recordType, Context context) {
-    LOGGER.debug("Trying to get MappingMetadata by recordType  '{}' for cache, okapi url: {}, tenantId: {}", recordType, context.getOkapiLocation(), context.getTenantId());
+    LOGGER.debug("Trying to get MappingMetadata by recordType  '{}' for cache, okapi url: {}, tenantId: {}", recordType,
+      context.getOkapiLocation(), context.getTenantId());
 
     var httpSyncClient = new SynchronousHttpClient(context);
     var response = httpSyncClient.get(context.getOkapiLocation() + "/mapping-metadata/type/" + recordType);
 
-    if (response.getStatusCode() == HttpStatus.SC_OK) {
+    if (response.statusCode() == HttpStatus.SC_OK) {
       LOGGER.info("MappingMetadata was fetched by recordType '{}'", recordType);
-      return Optional.of(Json.decodeValue(response.getBody(), MappingMetadataDto.class));
-    } else if (response.getStatusCode() == HttpStatus.SC_NOT_FOUND) {
+      return Optional.of(Json.decodeValue(response.body(), MappingMetadataDto.class));
+    } else if (response.statusCode() == HttpStatus.SC_NOT_FOUND) {
       LOGGER.warn("MappingMetadata was not found by recordType '{}'", recordType);
       return Optional.empty();
     } else {
-      String message = format("Error loading MappingMetadata by recordType: '%s', status code: %s, response message: %s",
-        recordType, response.getStatusCode(), response.getBody());
+      String message =
+        format("Error loading MappingMetadata by recordType: '%s', status code: %s, response message: %s",
+          recordType, response.statusCode(), response.body());
       LOGGER.warn(message);
       throw new CacheLoadingException(message);
     }
   }
 
-  public static MappingMetadataCache getInstance(Vertx vertx, HttpClient httpClient) {
-    return getInstance(vertx, httpClient, false);
-  }
-
-  /**
-   * Used for testing
-   */
-  public static synchronized MappingMetadataCache getInstance(Vertx vertx, HttpClient httpClient, boolean returnNew) {
-    if (instance == null || returnNew) {
-      instance = new MappingMetadataCache(vertx, httpClient, Long.parseLong(getCacheEnvVariable(vertx.getOrCreateContext().config(), METADATA_EXPIRATION_TIME)));
-    }
-    return instance;
-  }
-
-  private static String getCacheEnvVariable(JsonObject config, String variableName) {
-    String cacheExpirationTime = config.getString(variableName);
+  private static String getCacheEnvVariable(JsonObject config) {
+    String cacheExpirationTime = config.getString(METADATA_EXPIRATION_TIME);
     if (StringUtils.isBlank(cacheExpirationTime)) {
-      cacheExpirationTime = "3600";
+      return DEFAULT_CACHE_EXPIRATION;
     }
     return cacheExpirationTime;
   }
